--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.3",
     "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
