--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "standard": "^16.0.4"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.2.1"
   }
 }
