test: LoginRouter must return 400 if no email is provided

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
       "standard"
     ]
   },
+  "standard": {
+    "env": ["jest"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MatheusCod/clean-node-api.git"
